<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cinderhidden" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="202dp"
        android:layout_height="203dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cinderlogo" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textShortMessage|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.575"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/ic_check_black_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/createAccount"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/ic_add_black_24dp"
        android:drawablePadding="5dp"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/signinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signinButton"
        app:layout_constraintVertical_bias="1.0" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinButton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="Create an\naccount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/createAccount"
        app:layout_constraintEnd_toStartOf="@+id/createAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createAccount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:text="Login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/signinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signinButton"
        app:layout_constraintTop_toTopOf="@+id/signinButton" />

</android.support.constraint.ConstraintLayout>