<resources>
    <string name="app_name">Cinder</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="course5">Course 5</string>
    <string name="course6">Course 6</string>
...
